<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/balance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingRight="5dp"
        android:text="@string/lang_increase_balance_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/realtime_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="7dp"
        android:paddingTop="10dp"
        android:text="@string/lang_default_balance_zero"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/balance_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/price_field"
        android:text="@string/lang_submit" />

    <ImageButton
        android:id="@+id/balance_type_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/price_field"
        android:contentDescription="@string/balance_type_image"
        android:onClick="flipBalanceType"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:tag="+"
        android:src="@drawable/plus_sign" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/balance_text"
        android:layout_marginTop="16dp"
        android:paddingLeft="6dp"
        android:paddingRight="5dp"
        android:paddingTop="9dp"
        android:text="@string/lang_currency_type_rial"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/price_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_toLeftOf="@+id/balance_type_image"
        android:layout_toRightOf="@+id/textView2"
        android:ems="10"
        android:hint="@string/lang_default_balance_zero"
        android:inputType="number"
        android:paddingRight="5dp" />

</RelativeLayout>