<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/current_balance_title"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/current_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_toRightOf="@+id/currency"
        android:paddingRight="5dp"
        android:text=""
        android:textSize="20sp" />

    <TextView
        android:id="@+id/currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/current_balance"
        android:layout_alignBottom="@+id/current_balance"
        android:layout_alignParentLeft="true"
        android:paddingRight="5dp"
        android:text=""
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/stuff_bought_field"
        android:layout_marginTop="18dp"
        android:text="@string/lang_stuff_price"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/stuff_bought_field"
        android:layout_below="@+id/current_balance"
        android:layout_marginTop="36dp"
        android:text="@string/lang_stuff_bought"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/stuff_bought_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/stuff_price_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_toRightOf="@+id/textView4"
        android:ems="10"
        android:hint="@string/lang_default_balance_zero"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/submit_bought_stuff_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stuff_price_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:text="@string/lang_submit" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/stuff_price_field"
        android:layout_alignBottom="@+id/stuff_price_field"
        android:layout_alignParentLeft="true"
        android:paddingRight="3dp"
        android:text="@string/lang_currency_type_rial"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>